--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Toolbox to interact with Galt Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "",
   "license": "MIT",
