--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8",
-    "bs58": "^4.0.1"
+    "bs58": "^4.0.1",
+    "lodash": "^4.17.11",
+    "ngeohash": "^0.6.0"
   }
 }
