--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
     "lodash": "^4.17.11",
-    "ngeohash": "^0.6.0",
-    "overlay-pslg": "^1.0.0"
+    "martinez-polygon-clipping": "^0.5.0",
+    "ngeohash": "^0.6.0"
   }
 }
