--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mapbox/geojson-area": "^0.2.2",
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
+    "cli-table": "^0.3.1",
     "lodash": "^4.17.11",
     "martinez-polygon-clipping": "^0.5.0",
-    "ngeohash": "^0.6.0"
+    "ngeohash": "^0.6.0",
+    "yargs": "^13.3.0"
   }
 }
