--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bs58": "^4.0.1",
     "lodash": "^4.17.11",
     "martinez-polygon-clipping": "^0.5.0",
-    "ngeohash": "^0.6.0"
+    "ngeohash": "^0.6.0",
+    "web3-eth-abi": "1.0.0-beta.37"
   }
 }
