--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "martinez-polygon-clipping": "^0.5.0",
     "ngeohash": "^0.6.3",
     "web3-eth-abi": "1.0.0-beta.37",
+    "web3-utils": "1.0.0-beta.37",
     "yargs": "^14.0.0"
   }
 }
