--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
+    "geolib": "^3.2.0",
+    "geolocation-utils": "^1.2.2",
     "lodash": "^4.17.11",
     "martinez-polygon-clipping": "^0.5.0",
+    "mt-latlon": "^0.1.1",
     "ngeohash": "^0.6.3",
     "web3-eth-abi": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37",
