--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
+    "cyrillic-to-translit-js": "^3.1.0",
     "geolocation-utils": "^1.2.2",
     "lodash": "^4.17.11",
     "martinez-polygon-clipping": "^0.5.0",
