--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "bs58": "^4.0.1",
     "cyrillic-to-translit-js": "^3.1.0",
     "geolocation-utils": "^1.2.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.19",
     "martinez-polygon-clipping": "^0.5.0",
     "ngeohash": "^0.6.3",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37",
+    "web3-eth-abi": "1.3.0",
     "yargs": "^14.0.0"
   }
 }
